// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component > Input Checkbox renders correctly 1`] = `
<div
  className="checkbox"
>
  <label
    htmlFor="Do the thing?"
  >
    <input
      defaultChecked={true}
      type="checkbox"
    />
     
    Do the thing?
  </label>
</div>
`;

exports[`Component > Input File renders correctly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="Select files"
  >
    Select files
  </label>
  <input
    className="form-control"
    multiple={true}
    name="files"
    onChange={[Function]}
    placeholder="Select files"
    type="file"
    value={undefined}
  />
</div>
`;

exports[`Component > Input Group renders correctly 1`] = `
<div
  className="form-group"
/>
`;

exports[`Component > Input Input renders correctly 1`] = `
<input
  className="form-control"
  name="someInput"
  onChange={[Function]}
  placeholder="Enter Text"
  value=""
/>
`;

exports[`Component > Input Number renders correctly 1`] = `
<div
  className="form-group"
>
  <input
    className="form-control"
    min={0}
    name="someNumber"
    onChange={[Function]}
    onWheel={[Function]}
    placeholder="Enter Number"
    type="number"
    value={12345}
  />
</div>
`;

exports[`Component > Input Select renders correctly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="Select an option"
  >
    Select an option
  </label>
  <select
    className="form-control"
    label="Select an option"
    onBlur={[Function]}
    value=""
  >
    <option
      value="1"
    >
      1
    </option>
    <option
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`Component > Input SelectMultiple renders correctly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="Select multiple options"
  >
    Select multiple options
  </label>
  <select
    className="form-control"
    label="Select multiple options"
    multiple={true}
    onBlur={[Function]}
    value={Array []}
  >
    <option
      value="1"
    >
      1
    </option>
    <option
      value="2"
    >
      2
    </option>
  </select>
</div>
`;

exports[`Component > Input Text renders correctly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="Enter text"
  >
    Enter text
  </label>
  <input
    className="form-control"
    name="someText"
    onChange={[Function]}
    placeholder="Enter text"
    type="text"
    value="blah"
  />
</div>
`;
